added media into the application

--- a/application/homepage.html
+++ b/application/homepage.html
@@ -15,47 +15,170 @@
 
       <div class="one">
         <div class="title"><img src="TopFiveMusicTitle.png"></div>
+        <div class="media"><img src="runningMiles.png" style="padding-left: 35px"></div>
+        <div class="media"><img src="sittinOnTheDock.png" style="padding-left: 165px"></div>
+        <div class="media"><img src="trojanHorse.png" style="padding-left: 295px"></div>
+        <div class="media"><img src="4theHomies.png" style="padding-left: 425px"></div>
+        <div class="media"><img src="boomShakalaka.png" style="padding-left: 555px"></div>
+
+        <div class="mediaName" style="padding-left: 35px">Running Miles, Hippie Sabotage</div>
+        <div class="mediaName" style="padding-left: 165px">(Sittin On)The Dock of the Bay, Otis Reddi..</div>
+        <div class="mediaName" style="padding-left: 295px">TROJAN HORSE, SEBASTIAN PAUL</div>
+        <div class="mediaName" style="padding-left: 425px">Frio, Mike Stud</div>
+        <div class="mediaName" style="padding-left: 555px">Boom Shakalaka, Moksi</div>
+
         <img src="pinkSlideRight.png" height="200px">
       </div>
 
+
+
+
+
       <div class="two">
         <div class="atTheMomentTitle"><img src="AtTheMomentSongTitle.png"></div>
+        <div class="mediaATM" style="padding-left: 35px"><img src="runUp.png"></div>
+        <div class="mediaNameATM" style="padding-left: 45px">Run Up, Major Lazor, PARTYNEXTDOOR...</div>
+
         <img src="yellowSquare.png" height="200px"></div>
+
+
+
+
 
       <div class="three">
         <div class="title"><img src="TopFiveTVTitle.png" style="padding-left: 640px"></div>
+        <div class="media"><img src="gameOfThrones.png" style="padding-left: 55px"></div>
+        <div class="media"><img src="theCollection.png" style="padding-left: 185px"></div>
+        <div class="media"><img src="gossipGirl.png" style="padding-left: 315px"></div>
+        <div class="media"><img src="bigLittleLies.png" style="padding-left: 445px"></div>
+        <div class="media"><img src="normalPeople.png" style="padding-left: 575px"></div>
+
+
+        <div class="mediaName" style="padding-left: 55px">Game of Thrones</div>
+        <div class="mediaName" style="padding-left: 185px">The Collection</div>
+        <div class="mediaName" style="padding-left: 315px">Gossip Girl</div>
+        <div class="mediaName" style="padding-left: 445px">Big Little Lies</div>
+        <div class="mediaName" style="padding-left: 575px">Normal People</div>
+
       <img src="blueSlide.png" height="200px"></div>
+
+
+
 
       <div class="four">
         <div class="atTheMomentTitle"><img src="AtTheMomentTVTitle.png"></div>
+        <div class="mediaATM" style="padding-left: 35px"><img src="killingEve.png"></div>
+        <div class="mediaNameATM" style="padding-left: 45px">Killing Eve</div>
         <img src="yellowSquare.png" height="200px"></div>
+
+
+
 
       <div class="five">
         <div class="title"><img src="TopFiveMoviesTitle.png"></div>
+        <div class="media"><img src="callMeByYourName.png" style="padding-left: 35px"></div>
+        <div class="media"><img src="ladyBird.png" style="padding-left: 165px"></div>
+        <div class="media"><img src="mildredPierce.png" style="padding-left: 295px"></div>
+        <div class="media"><img src="amelie.png" style="padding-left: 425px"></div>
+        <div class="media"><img src="ferrisBuelers.png" style="padding-left: 555px"></div>
+
+        <div class="mediaName" style="padding-left: 35px">Call Me By Your Name</div>
+        <div class="mediaName" style="padding-left: 165px">Lady Bird</div>
+        <div class="mediaName" style="padding-left: 295px">Mildred Pierce</div>
+        <div class="mediaName" style="padding-left: 425px">Amelie</div>
+        <div class="mediaName" style="padding-left: 555px">Ferris Bueller's Day Off</div>
+
         <img src="orangeSlide.png" height="200px"></div>
+
+
+
+
 
       <div class="six">
         <div class="atTheMomentTitle"><img src="AtTheMomentMoviesTitle.png"></div>
+        <div class="mediaATM" style="padding-left: 35px"><img src="meWithoutYou.png"></div>
+        <div class="mediaNameATM" style="padding-left: 45px">Me Without You</div>
         <img src="yellowSquare.png" height="200px"></div>
+
+
+
+
 
       <div class="seven">
         <div class="title"><img src="TopFiveBooksTitle.png" style="padding-left: 620px"></div>
+
+        <div class="media"><img src="EveryExquisiteThing.png" style="padding-left: 575px"></div>
+        <div class="media"><img src="godOfSmallThings.png" style="padding-left: 445px"></div>
+        <div class="media"><img src="daughterOfSmokeAndBone.png" style="padding-left: 315px"></div>
+        <div class="media"><img src="catcherInTheRye.png" style="padding-left: 185px"></div>
+        <div class="media"><img src="heartIsALonelyHunter.png" style="padding-left: 55px"></div>
+
+        <div class="mediaName" style="padding-left: 575px">Every Exquisite Thing</div>
+        <div class="mediaName" style="padding-left: 445px">The God of Small Things</div>
+        <div class="mediaName" style="padding-left: 315px">Daughter of Smoke and Bone</div>
+        <div class="mediaName" style="padding-left: 185px">Catcher in the Rye</div>
+        <div class="mediaName" style="padding-left: 55px">The Heart is a Lonely Hunter</div>
+
         <img src="pinkSlideRight.png" height="200px"></div>
+
+
+
 
       <div class="eight">
         <div class="atTheMomentTitle"><img src="AtTheMomentBooksTitle.png"></div>
+        <div class="mediaATM" style="padding-left: 35px"><img src="thePlague.png"></div>
+        <div class="mediaNameATM" style="padding-left: 45px">The Plague, Albert Camus</div>
         <img src="yellowSquare.png" height="200px"></div>
+
+
+
+
 
       <div class="nine">
         <div class="title"><img src="TopFiveArtistsTitle.png"></div>
+        <div class="media"><img src="nombe.png" style="padding-left: 35px"></div>
+        <div class="media"><img src="sebastianPaul.png" style="padding-left: 165px"></div>
+        <div class="media"><img src="diplo.png" style="padding-left: 295px"></div>
+        <div class="media"><img src="lorde.png" style="padding-left: 425px"></div>
+        <div class="media"><img src="hippieSabotage.png" style="padding-left: 555px"></div>
+
+        <div class="mediaName" style="padding-left: 35px">NoMBe</div>
+        <div class="mediaName" style="padding-left: 165px">SEBASTIAN PAUL</div>
+        <div class="mediaName" style="padding-left: 295px">Diplo</div>
+        <div class="mediaName" style="padding-left: 425px">Lorde</div>
+        <div class="mediaName" style="padding-left: 555px">Hippie Sabotage</div>
+
         <img src="blueSlide.png" height="200px"></div>
+
+
+
+
 
       <div class="ten">
         <div class="atTheMomentTitle"><img src="AtTheMomentArtistTitle.png"></div>
+        <div class="mediaATM" style="padding-left: 35px"><img src="diplo.png"></div>
+        <div class="mediaNameATM" style="padding-left: 45px">Diplo</div>
         <img src="yellowSquare.png" height="200px"></div>
+
+
+
+
 
       <div class="eleven">
         <div class="title"><img src="TopFiveAlbumsTitle.png" style="padding-left: 610px"></div>
+
+        <div class="media"><img src="melodrama.png" style="padding-left: 575px"></div>
+        <div class="media"><img src="lifeOfAWallflower.png" style="padding-left: 445px"></div>
+        <div class="media"><img src="theyMightveEvenLovedMe.png" style="padding-left: 315px"></div>
+        <div class="media"><img src="trojanHorse.png" style="padding-left: 185px"></div>
+        <div class="media"><img src="4theHomies.png" style="padding-left: 55px"></div>
+
+        <div class="mediaName" style="padding-left: 575px">Melodrama, Lorde</div>
+        <div class="mediaName" style="padding-left: 445px">Life of a Wallflower, Whethan</div>
+        <div class="mediaName" style="padding-left: 315px">They Might've Even Loved Me, NoMBe</div>
+        <div class="mediaName" style="padding-left: 185px">TROJAN HORSE, SEBASTIAN PAUL</div>
+        <div class="mediaName" style="padding-left: 55px">4THEHOMIES, Mike Stud</div>
+
         <img src="orangeSlide.png" height="200px"></div>
 
       </div>
