updates to profile and to the slides

--- a/application/profile.html
+++ b/application/profile.html
@@ -17,7 +17,7 @@
 
       <div class="slidingStuff">
 
-      <div class="seen">
+      <div class="seen" style="padding-top: 100px">
         <div class="title"><img src="TopFiveMusicTitle.png"></div>
         <div class="media"><img src="runningMiles.png" style="padding-left: 35px"></div>
         <div class="media"><img src="sittinOnTheDock.png" style="padding-left: 165px"></div>
@@ -211,8 +211,8 @@
       <a href="homepage.html"><div class="buttonsAtBase"><img src="home.png"></div></a>
       <div class="buttonsAtBase"><img src="search.png"></div>
       <div class="buttonsAtBase"><img src="add.png"></div>
-
-      <a href="profile.html"><div class="buttonsAtBase"><img src="profile.png"></div></a>
+      <a href="profile.html"><div class="buttonsAtBase"><img src="profile.png"></div>
+      <div class="profileToggle"><img src="profileBar.png"></div></a>
 
 
 
