adding some connections

--- a/application/homepage.html
+++ b/application/homepage.html
@@ -35,7 +35,7 @@
         </div>
 
         <script>
-        $( "div.seen" ).scrollLeft( 0 );
+        $( "div.seen" ).scrollLeft( -40 );
       </script>
 
 
@@ -69,7 +69,7 @@
       <img src="blueSlide.png" height="200px"></div>
 
       <script>
-      $( "div.three" ).scrollLeft( 395 );
+      $( "div.three" ).scrollLeft( 355 );
     </script>
 
 
@@ -101,7 +101,7 @@
         <img src="orangeSlide.png" height="200px" width="710px"></div>
 
         <script>
-        $( "div.five" ).scrollLeft( 0 );
+        $( "div.five" ).scrollLeft( -40 );
         </script>
 
 
@@ -134,7 +134,7 @@
         <img src="pinkSlideRight.png" height="200px"></div>
 
         <script>
-        $( "div.seven" ).scrollLeft( 395 );
+        $( "div.seven" ).scrollLeft( 355 );
         </script>
 
 
@@ -165,7 +165,7 @@
         <img src="blueSlide.png" height="200px" width="710px"></div>
 
         <script>
-        $( "div.nine" ).scrollLeft( 0 );
+        $( "div.nine" ).scrollLeft( -40 );
         </script>
 
 
@@ -198,14 +198,14 @@
         <img src="orangeSlide.png" height="200px"></div>
 
         <script>
-        $( "div.eleven" ).scrollLeft( 395 );
+        $( "div.eleven" ).scrollLeft( 355 );
       </script>
 
       </div>
 
 
       <div class="header"></div>
-    <div class="header"><img src="theBulletin.png"></div>
+    <a href="homepage.html"><div class="header"><img src="theBulletin.png"></div></a>
     <div class="baseRectangle">
       <!-- <img src="Rectangle13.png" style="position: absolute, z-index: -1"> -->
       <a href="homepage.html"><div class="buttonsAtBase"><img src="home.png"></div></a>
