--- a/application/profile.html
+++ b/application/profile.html
@@ -35,7 +35,7 @@
         </div>
 
         <script>
-        $( "div.seen" ).scrollLeft( 0 );
+        $( "div.seen" ).scrollRight( 40 );
       </script>
 
 
@@ -205,7 +205,7 @@
 
 
       <div class="header"></div>
-    <div class="header"><img src="theBulletin.png"></div>
+    <a href="homepage.html"><div class="header"><img src="theBulletin.png"></div></a>
     <div class="baseRectangle">
       <!-- <img src="Rectangle13.png" style="position: absolute, z-index: -1"> -->
       <a href="homepage.html"><div class="buttonsAtBase"><img src="home.png"></div></a>
