ios properties at top of screen

--- a/application/homepage.html
+++ b/application/homepage.html
@@ -205,7 +205,12 @@
 
 
       <div class="header"></div>
-    <a href="homepage.html"><div class="header"><img src="theBulletin.png"></div></a>
+    <a href="homepage.html"><div class="header">
+      <div class="iosCharacteristics" style="padding-right: 350px"><img src="time.png"></div>
+      <div class="iosCharacteristics"style="padding-left: 240px"><img src="connection.png"></div>
+      <div class="iosCharacteristics" style="padding-left: 280px"><img src="wifi.png"></div>
+      <div class="iosCharacteristics" style="padding-left: 317px"><img src="battery.png"></div>
+      <img src="theBulletin.png"></div></a>
     <div class="baseRectangle">
       <!-- <img src="Rectangle13.png" style="position: absolute, z-index: -1"> -->
       <a href="homepage.html"><div class="buttonsAtBase"><img src="home.png"></div></a>
