added p3 to the landing site

--- a/landingPage/project3.html
+++ b/landingPage/project3.html
@@ -40,15 +40,28 @@
 <!-- body -->
     <div class="headings"> Project 3</div>
 
-    <div class="subtext"> Part 1</div>
+    <div class="subtext"> Idea 1</div>
     <div class="subtext">
-      <iframe src="p3p1.pdf" width="70%" height="600px">
+      <iframe src="p3p1.pdf" width="70%" height="400px">
     </iframe></div>
-    <div class="subtext"> Part 2</div>
     <div class="subtext">
       <iframe src="p3p2.pdf" width="70%" height="600px">
     </iframe></div>
+    <div class="subtext"> Part 1</div>
+    <div class="subtext">
+      <iframe src="Bored during quarantine_.pdf" width="70%" height="400px">
+    </iframe></div>
+    <div class="subtext"> Part 2</div>
+    <div class="subtext">
+      <iframe src="inspo for UI.pdf" width="70%" height="400px">
+    </iframe></div>
     <div class="subtext"> Part 3</div>
+    <div class="subtext">
+      <a href="https://daisylbell.github.io/application/homepage.html" style="text-decoration: none"><button>daisylbell.github.io/application/homepage.html</button></a>
+      </div>
+      <div class="subtext">
+        <iframe src="iml 300 final project.pdf" width="70%" height="400px">
+      </iframe></div>
 
     <!-- bottom -->
     <a href="project3.html" style="text-decoration: none">
